assets/scss/_styles_project.scss
@font-face {
    font-family: 'Berkley Mono';
    src: url('../fonts/berkley/BerkeleyMono-Regular.woff2') format('woff2'),
        url('../fonts/berkley/BerkeleyMono-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-displau: swap;
}

@font-face {
    font-family: 'Berkley Mono';
    src: url('../fonts/berkley/BerkeleyMono-Italic.woff2') format('woff2'),
        url('../fonts/berkley/BerkeleyMono-Italic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
    font-displau: swap;
}

@font-face {
    font-family: 'Berkley Mono';
    src: url('../fonts/berkley/BerkeleyMono-Bold.woff2') format('woff2'),
        url('../fonts/berkley/BerkeleyMono-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-displau: swap;
}

@font-face {
    font-family: 'Berkley Mono';
    src: url('../fonts/berkley/BerkeleyMono-BoldItalic.woff2') format('woff2'),
        url('../fonts/berkley/BerkeleyMono-BoldItalic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
    font-displau: swap;
}

/*
Hide the view and edit page links "Edit this page", "Create child page", "Create project issue".
Docsy Userguide reference: ./themes/docsy/userguide/content/en/docs/Adding content/repository-links.md.
*/
.td-page-meta--edit {
    display: none !important;
}

.td-page-meta--child {
    display: none !important;
}

.td-page-meta--project-issue {
    display: none !important;
}


/**
* Fix margin issue for ToC menu "edit page report issue" links.
*/
.td-page-meta.ml-2.pb-1.pt-2.mb-0 {
    margin-left: 0 !important;
}

/**
* Remove broken footer
*/
footer.bg-dark.py-5.row.d-print-none {
    display: none;
}

/**
* Hide nav bar space when on smaller devices
*/
@media (max-width: 991.98px) {
    .td-navbar .td-navbar-nav-scroll {
        display: none;
    }
}

/**
* Fix height issue for left hand navigation
*/
@media (min-width: 768px) {
    @supports (position: sticky) {
        .td-sidebar-nav {
            max-height: calc(100vh - 64px);
        }
    }
}

